Dev/src/LeanData/objects/Territory_Segment__c.object
<CustomObject>
    <fields>
        <fullName>Draft_FileName__c</fullName>
        <label>Draft FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_Used__c</fullName>
        <label>Fields Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Status__c</fullName>
        <label>Upload Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version Number</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Territory Segment</label>
    <nameField>
        <label>Territory Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>